[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["achim-t <achim.t@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
bson = "^0.5.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
